<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorGray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/AppTheme"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:title="">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme"
                app:layout_collapseMode="pin"
                />

            <ImageView
                android:id="@+id/toolbarImage"
                android:transitionName="@string/profile_picture_transition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@color/colorPrimary"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/textView_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingStart="16dp"
                android:paddingBottom="8dp"
                android:textSize="24sp"
                tools:text="Marie"/>

            <ImageButton
                android:id="@+id/image_details_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back_arrow"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:padding="10dp"
                android:background="@drawable/white_rounded_frame">

            <TextView
                android:id="@+id/textView_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                tools:text="Marie"/>

                <ImageView
                    android:id="@+id/ic_location"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/textView_detail_name"
                    android:src="@drawable/ic_location"/>

                <ImageView
                    android:id="@+id/ic_phone"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/ic_location"
                    android:src="@drawable/ic_phone"/>

                <ImageView
                    android:id="@+id/ic_network"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/ic_phone"
                    android:src="@drawable/ic_network"/>

                <TextView
                    android:id="@+id/textView_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/ic_location"
                    android:layout_alignTop="@id/ic_location"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    tools:text="location"/>

                <TextView
                    android:id="@+id/textView_detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/ic_phone"
                    android:layout_alignTop="@id/ic_phone"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    tools:text="0000 000 000 000"/>

                <TextView
                    android:id="@+id/textView_detail_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/ic_network"
                    android:layout_alignTop="@id/ic_network"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    tools:text="face book"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:padding="10dp"
                android:background="@drawable/white_rounded_frame">

                <TextView
                    android:id="@+id/textView_detail_a_propos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@android:color/black"
                    android:text="A propos de moi"/>

                <TextView
                    android:id="@+id/textView_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/textView_detail_a_propos"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"/>

            </RelativeLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appBar"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_star_empty"
        android:backgroundTint="@android:color/background_light"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>