<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_picture_transition">profile_picture_transition></string>

    <string name="SHARED_PREF_FAVORITES">SHARED_PREF_FAVORITES</string>
    <string name="shared_pref_key">SHARED_PREF_KEY</string>


</resources>
